--- a/FSK.APIService/FSK.APIService.csproj
+++ b/FSK.APIService/FSK.APIService.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>fed78c1a-a5d9-403c-a307-cc94ecaa0d75</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
