--- a/FSK.APIService/appsettings.json
+++ b/FSK.APIService/appsettings.json
@@ -5,6 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Vnpay": {
+    "TmnCode": "L6HT7TRL",
+    "HashSecret": "OF6M0J6RIX8RN9ANH5Z0PKLY3YK6TKGT",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAAZY\\SQLEXPRESS;Initial Catalog=SWP391FengShuiKoiSystem;Persist Security Info=True;User ID=sa;Password=12345;Encrypt=False"
