Update Payment VnPay

--- a/FSK.APIService/appsettings.json
+++ b/FSK.APIService/appsettings.json
@@ -17,5 +17,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAAZY\\SQLEXPRESS;Initial Catalog=SWP391FengShuiKoiSystem;Persist Security Info=True;User ID=sa;Password=12345;Encrypt=False"
-  }
+  },
+  "PaymentCallBack": {
+    "ReturnUrl": "https://localhost:7275/api/Test/CheckData"
+  },
+  "TimeZoneId": "SE Asia Standard Time", // If do not us Windown OS change it to: Asia/Bangkok
 }
