--- a/FSK.APIService/appsettings.json
+++ b/FSK.APIService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MINHTHUAN\\SQLEXPRESS;Initial Catalog=SWP391FengShuiKoiSystem;Persist Security Info=True;User ID=sa;Password=12345;Encrypt=False"
+    "DefaultConnection": "Data Source=LAAZY\\SQLEXPRESS;Initial Catalog=SWP391FengShuiKoiSystem;Persist Security Info=True;User ID=sa;Password=12345;Encrypt=False"
   },
   "Vnpay": {
     "TmnCode": "L6HT7TRL",
@@ -19,7 +19,7 @@
     "Locale": "vn"
   },
   "PaymentCallBack": {
-    "ReturnUrl": "https://localhost:7275/api/Test/CheckData"
+    "ReturnUrl": "https://localhost:7275/api/Advertisement/CheckData"
   },
   "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
 }
