--- a/FSK.Repository/efpt.config.json
+++ b/FSK.Repository/efpt.config.json
@@ -27,6 +27,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[Blog]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Color]",
          "ObjectType": 0
       },
