Added JWT authentication + fixed some syntax

--- a/FSK.APIService/appsettings.json
+++ b/FSK.APIService/appsettings.json
@@ -9,6 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=MINHTHUAN\\SQLEXPRESS;Initial Catalog=SWP391FengShuiKoiSystem;Persist Security Info=True;User ID=sa;Password=12345;Encrypt=False"
   },
+  "Jwt": {
+    "Key": "ThisIsAVeryLongAndVerySafeLineofCode",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  },
   "Vnpay": {
     "TmnCode": "L6HT7TRL",
     "HashSecret": "OF6M0J6RIX8RN9ANH5Z0PKLY3YK6TKGT",
